<?xml version="1.0"?>
<package>
  <name>enu</name>
  <version>1.2.1</version>
  <description>enu</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/enu</url>
  <url type="bugtracker">https://github.com/clearpathrobotics/enu/issues</url>
  <url type="repository">https://github.com/clearpathrobotics/enu</url>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>swiftnav</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend version_gte="0.8.0">swiftnav</run_depend>

  <export>
  </export>
</package>
